Added settings menu to choose type file.